Add scheduled task for removing solicitor access from case